# secure-waypoint

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
api/v1/: __init__.py  health.py  tokens.py  users.py
app/controllers/: user.py
app/helpers/: __init__.py  token.py
app/models/: user.py
app/repositories/: __init__.py  users.py
app/schemas/extras/: __init__.py  current_user.py  health.py
app/schemas/requests/: __init__.py  base.py  users.py
app/schemas/responses/: __init__.py  base.py  users.py
cli/: __init__.py  database.py  shell.py
core/: config.py  server.py
core/controller/: base.py
core/database/: __init__.py  session.py  standalone_session.py
core/database/mixins/: timestamp.py
core/exceptions/: __init__.py  base.py
core/factory/: factory.py
core/fastapi/dependencies/: __init__.py  authentication.py  controllers.py  current_user.py
core/fastapi/middlewares/: __init__.py  authentication_backend.py  response_logger.py
core/repository/: base.py
core/security/: __init__.py  jwt_handler.py  password_handler.py  require_role.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/v1/: test_tokens.py  test_users.py
tests/api/v1/users/: test_users.py
tests/core/repository/: test_base.py
tests/core/security/: test_jwt_handler.py
